# duo_tool

./: .pre-commit-config.yaml  pyproject.toml
duo_tool/: calculations.py  inputs.py  main.py  utils.py
tests/: test_calculations.py
