[tool.poetry]
name = "duo-tool"
version = "0.1.0"
description = ""
authors = ["Jarno Smit <51162363+jarnos97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pandas = "^2.1.4"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
