[tool.poetry]
name = "duo-tool"
version = "0.1.0"
description = ""
authors = ["Jarno Smit <51162363+jarnos97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
loguru = "^0.7.2"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
